# 2023-alimama-ai_Infer_optim

./: README.md
benchmark/: CMakeLists.txt
benchmark/core/: benchmark.cc  model.cc  model.h  predict_request_consumer.cc  predict_request_consumer.h
benchmark/proto/: bench_conf.proto
